﻿----------------------Release Notes-------------------
v1.0.5.134
	+能够正确按照版本替换汉化文件及英文文件
	+具有正确的文本提示
v1.1.6.140
	+新增联网更新面板，允许通过网络进行更新，但只能下载更新包，不能处理更新包
	+联网更新面板可折叠
	+关于说明
	+开源协议说明
v1.1.6.155
	+修复了联网更新不能处理更新包的问题
	-由于进度原因，暂时关闭了动作库概述汉化及修复功能
v1.1.7.131
	+自动查找允许查找Steam版安装路径了
	+自动查找失败将不会自动关闭自动查找功能
	#修复了当无vers文件夹时的bug
v1.2.18.1015
	+修改下载网址、连接网址
	+增加中文文档链接
	+增加修改IDE字体及字号功能
	-移除多版本汉化功能，只保留对最新版本的汉化，并且去除还原按钮（无需还原，不会覆盖原英文csv文件）
v1.2.18.1024
	+增加runtime下载功能（来源：LiarOnce）
	#字体及字号现在采用不卡界面的异步加载
v1.2.18.10242
	+runtime下载增加选择GMS2版本功能
	+修改界面
v1.3.18.1101
	+增加日志
	#重做界面
	#修复字体修改无效问题，暂时禁用修改字体大小功能
v1.3.18.1102
	#日志改用24小时制
	#修正自动搜索的bug