@@ -3,30 +3,25 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:GMS2GiMiSi.View.GMS2ChildPage"
+      xmlns:local="clr-namespace:GMS2GiMiSi.View"
       mc:Ignorable="d" d:DesignWidth="450"
       Title="AboutPage" Height="400">
 
     <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,0,0" Width="430" Height="380">
         <StackPanel Orientation="Horizontal">
-            <Image Height="62" VerticalAlignment="Top" Source="../../Resources/Banner.png" HorizontalAlignment="Left" Width="189"/>
+            <Image Height="62" VerticalAlignment="Top" Source="../Resources/Banner.png" HorizontalAlignment="Left" Width="189"/>
             <Button Focusable="False" Margin="5,0,0,0" Background="{x:Null}" BorderBrush="{x:Null}"  Height="62" VerticalAlignment="Top" Cursor="Hand" HorizontalAlignment="Left" Width="227" Click="GMCN_Link">
-                <Image Source="../../Resources/logo.png"/>
+                <Image Source="../Resources/logo.png"/>
             </Button>
         </StackPanel>
         <StackPanel Margin="0,0,0,0">
             <TextBlock Text="关于" FontSize="20" Foreground="#FF3AB3E1"/>
-            <TextBlock ><Run FontSize="15" Text="GameMaker Studio 2 吉米赛" /><Run Text=" -from GameMaker 开发者之家" /></TextBlock>
+            <TextBlock Margin="0,5,0,0"><Run FontSize="15" Text="GameMaker Studio 2 吉米赛" /><Run Text=" -from GameMaker 开发者之家" /></TextBlock>
             <TextBlock x:Name="VersionDisplay" Text="版本：{0}"/>
-            <TextBlock>
-                <Hyperlink x:Name="LogHyperlink" FontWeight="Bold" Click="LogHyperlink_OnClick">
-                    <Run Text="打开日志文件夹"/>
-                </Hyperlink>
-            </TextBlock>
         </StackPanel>
         <StackPanel Margin="0,20,0,0">
             <TextBlock Text="开源许可" FontSize="20" Foreground="#FF3AB3E1"/>
-            <TextBlock Text="软件遵循 GNU GPL v3.0 协议"/>
+            <TextBlock Text="软件遵循 GNU GPL v3.0 协议" Margin="0,5,0,0"/>
             <Image HorizontalAlignment="Left" Height="44" Margin="0,5" VerticalAlignment="Top" Width="102" Source="/Resources/720px-GPLv3_Logo.svg.png" SnapsToDevicePixels="True"/>
             <TextBlock>
                 <Hyperlink x:Name="Link2Code" FontWeight="Bold" NavigateUri="https://github.com/GamemakerChina/GiMiSi" Click="Link2Code_Click">
@@ -36,7 +31,7 @@
         </StackPanel>
         <StackPanel Margin="0,20,0,0">
             <TextBlock Text="联系我们" FontSize="20" Foreground="#FF3AB3E1"/>
-            <TextBlock Height="56" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" HorizontalAlignment="Left"><Run Text="GameMaker开发者之家QQ群：" /><Run Text=" "/><Run FontWeight="Bold" Text="235271204" /><Run Text=" "/><Run FontWeight="Bold" /><LineBreak /><Run Text="原作者：小太" /><Run Text=" "/><Run Text="（Oberon）&#x9;" /><Run Text=" "/><Run FontWeight="Bold" Text="QQ：360119124" /><LineBreak /><Run Text="更新：tpxxn" /><Run Text=" "/><Run FontWeight="Bold" Text="QQ：351765204" /><LineBreak /></TextBlock>
+            <TextBlock  Margin="0,5,0,0" Height="56" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" HorizontalAlignment="Left"><Run Text="GameMaker开发者之家QQ群：" /><Run Text=" "/><Run FontWeight="Bold" Text="235271204" /><Run Text=" "/><Run FontWeight="Bold" /><LineBreak /><Run Text="原作者：小太" /><Run Text=" "/><Run Text="（Oberon）&#x9;" /><Run Text=" "/><Run FontWeight="Bold" Text="QQ：360119124" /><LineBreak /><Run Text="更新：tpxxn" /><Run Text=" "/><Run FontWeight="Bold" Text="QQ：351765204" /><LineBreak /></TextBlock>
         </StackPanel>
     </StackPanel>
 </Page>
