@@ -1,0 +1,19 @@
+﻿<Page x:Class="GMS2GiMiSi.View.SettingPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:GMS2GiMiSi.View"
+      mc:Ignorable="d" d:DesignWidth="450"
+      Title="AboutPage" Height="400">
+
+    <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,0,0" Width="430" Height="380">
+        <StackPanel Margin="0,0,0,0">
+            <TextBlock Text="软件日志" FontSize="20" Foreground="#FF3AB3E1"/>
+            <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
+                <Button Style="{StaticResource BtnInfoStyle}" x:Name ="OpenLogDirButton" Content="打开日志文件夹" Click="OpenLogDirButton_OnClick"  VerticalAlignment="Top" HorizontalAlignment="Left" Width="93" Height="24"/>
+                <Button Style="{StaticResource BtnInfoStyle}" Margin="5,0,0,0" x:Name ="DelLogDirButton" Content="清除日志" Click="ClearLogDirButton_OnClick"  VerticalAlignment="Top" HorizontalAlignment="Left" Height="24" Width="56"/>
+            </StackPanel>
+        </StackPanel>
+    </StackPanel>
+</Page>
