@@ -30,5 +30,7 @@ v1.3.18.1101
 	#重做界面
 	#修复字体修改无效问题，暂时禁用修改字体大小功能
 v1.3.18.1102
+	+增加设置页面（可以打开、清除日志文件夹）
+	+GMS2 安装路径自动搜索现在可以检测到 steam UWP、Web 和 Mobile 版
 	#日志改用24小时制
 	#修正自动搜索的bug
